--- a/Softwares.html
+++ b/Softwares.html
@@ -17,5 +17,29 @@
             <th><a href="WWDC.html"><img src="IMG/WWDC2024.jpg" alt="WWDC 2024" width="23%" height="auto"></a></th>
         </tr>
     </table>
+    <center>
+        <figure>
+            <img src="IMG/DestaquesiOS.jpg" alt="Iphones com o iOS 17">
+            <br />
+            <figcaption>
+                iOS 17 em destaque nos iPhones 14 Pro 
+            </figcaption>
+        </figure>
+    </center>
+        <ul >
+            <li><b>iOS 17:</b>
+                A nova versão do iOS traz o recurso Em Espera, que permite ver e interagir com aplicativos enquanto o iPhone carrega. Agora, é possível criar Stickers
+                diretamente da galeria de fotos. O app Diário foi lançado para registrar memórias, acessíveis apenas ao usuário.
+                O AirDrop foi melhorado, permitindo personalizar a apresentação de contatos e compartilhar informações aproximando os iPhones.
+            </li>
+            <br>
+            <br>
+           <li><b>watchOS 10:</b>
+             O watchOS 10 tem uma nova interface para o Apple Watch, com um Conjunto Inteligente que mostra widgets úteis no momento certo.
+            Há novos mostradores e recursos específicos para ciclismo e trilhas. O app Atenção Plena agora permite registrar e acompanhar emoções.
+
+           </li>
+            
+        </ul>
 </body>
 </html>
