--- a/Softwares.html
+++ b/Softwares.html
@@ -6,9 +6,10 @@
     <title>Softwares</title>
 </head>
 <body bgcolor="#000000">
-    <font color="#FFFFFF">
-    <font face="Arial">
-    <img src="IMG/iOS.jpg" alt="Logo iOS 17" width="100%" height="auto" margin="0">
+    <font face="Arial" color="#FFFFFF" size="5" >
+    <center>
+        <img src="IMG/iOS.jpg" alt="Logo iOS 17" width="75%" height="auto" margin="0">
+    </center>
     <table align=center cellpadding="1%" cellspacing="1">
         <tr>
             <th><a href="VisionPro.html"><img src="IMG/VisionPro.jpg" alt="Apple Vision Pro" width="23%" height="auto"></a></th>
@@ -19,7 +20,7 @@
     </table>
     <center>
         <figure>
-            <img src="IMG/DestaquesiOS.jpg" alt="Iphones com o iOS 17">
+            <img src=>
             <br />
             <figcaption>
                 iOS 17 em destaque nos iPhones 14 Pro 
@@ -27,19 +28,88 @@
         </figure>
     </center>
         <ul >
+            <center>
+                <figure>
+                    <img src="IMG/DestaquesiOS.jpg">
+                    <br />
+                    <figcaption>
+                        iOS 17 em destaque nos iPhones 14 Pro 
+                    </figcaption>
+                </figure>
+            </center>
             <li><b>iOS 17:</b>
-                A nova versão do iOS traz o recurso Em Espera, que permite ver e interagir com aplicativos enquanto o iPhone carrega. Agora, é possível criar Stickers
-                diretamente da galeria de fotos. O app Diário foi lançado para registrar memórias, acessíveis apenas ao usuário.
-                O AirDrop foi melhorado, permitindo personalizar a apresentação de contatos e compartilhar informações aproximando os iPhones.
+                O novo iOS traz novas possibilidades com o AirDrop permitindo compartilhar documentos e até mesmo seu contato só encostando dois iPhones.
+                O novo recurso Em Espera permite interagir com apps enquanto o iPhone está na horizontal carregando.
+                Se torna possível fazer adesivos diretamente da galeria e também foi mostrado o app Diário que você consegue anotar diversas coisas a hora que quiser e somente o usuário verá.
             </li>
             <br>
             <br>
+            <center>
+                <figure>
+                    <img src="IMG/DestaquesWatchOS.jpg" alt="">
+                    <br />
+                    <figcaption>
+                        watchOS 10 em destaque em um Apple Watch
+                    </figcaption>
+                </figure>
+                </center>
            <li><b>watchOS 10:</b>
-             O watchOS 10 tem uma nova interface para o Apple Watch, com um Conjunto Inteligente que mostra widgets úteis no momento certo.
-            Há novos mostradores e recursos específicos para ciclismo e trilhas. O app Atenção Plena agora permite registrar e acompanhar emoções.
-
+                Foi redesenhada a interface do Apple watch trazendo um novo Conjunto Inteligente
+                que mostra novos widgets e mostradores também teve atualização nas atividades de ciclismo e trilhas e com o app Atenção Plena permite registrar suas emoções.
            </li>
-            
+            <br>
+            <br>
+            <center>
+                <figure>
+                    <img src="IMG/DestaqueiPadOS.jpg" alt="">
+                    <br />
+                    <figcaption>
+                        iPadOS em um iPad Air 
+                    </figcaption>
+                </figure>
+                </center>
+           <li><b>iPadOS 17:</b>
+                Com o novo iPadOS 17 tem ainda mais opções de personalização na Tela de Bloqueio e uma maior interação com widgets e o app Saúde chegou no
+                iPad trazendo com ele gráficos especiais para a tela do iPad.
+           </li>
+            <br>
+            <br>
+            <center>
+                <figure>
+                    <img src="IMG/DestaqueMacOS.jpg" alt="">
+                    <br />
+                    <figcaption>
+                        Novo macOS Sonoma rodando em computadores
+                    </figcaption>
+                </figure>
+                </center>
+            <li><b>macOS Sonoma:</b>
+                O macOS traz melhorias como o novo Modo de Jogo que optimiza os jogos para mac deixando mais fluido e
+                melhorando a jogabilidade e novos widgets por toda a parte.
+           </li>
+            <br>
+            <br>
+            <center>
+                <figure>
+                    <img src="IMG/DestaquesTvOS.jpg" alt="">
+                    <br />
+                    <figcaption>
+                        tvOS 17 conectado em uma tv e um iPhone
+                    </figcaption>
+                </figure>
+                </center>
+           <li><b>tvOS 17:</b>
+                Chegou o FaceTime chegou a Apple TV 4K sendo possível assistir filmes em lugares diferentes mas permanecendo conectados com o Split View e também chegou o
+                Palco Central que você pode se movimentar e continua centralizado.
+           </li> 
         </ul>
+    <font size="3">
+    <footer align="left">
+            <hr>
+            <h6>Todas as imagens são de autoria da <a href="https://www.apple.com/br/" target="_blank">Apple Computer Inc&copy;</a></h6>
+            <h6>Todos os textos foram escritos pelo autor e inspirados pelo artigo "Destaques da WWDC23" da <a href="https://www.apple.com/br/"target="_blank">Apple&copy;</a></h6>
+    </footer>
+    </font>
+    </font>
 </body>
 </html>
