--- a/VisionPro.html
+++ b/VisionPro.html
@@ -6,8 +6,7 @@
     <title>Vision Pro</title>
 </head>
 <body bgcolor="#000000">
-    <font color="#FFFFFF">
-    <font face="Arial">
+    <font face="Arial" color="#FFFFFF" size="5">
     <img src="IMG/VisionPro.jpg" alt="Apple Vision Pro" width="100%" height="auto" margin="0">
     <table align=center cellpadding="1%" cellspacing="1">
         <tr>
@@ -17,5 +16,13 @@
             <th><a href="WWDC.html"><img src="IMG/WWDC2024.jpg" alt="WWDC 2024" width="23%" height="auto"></a></th>
         </tr>
     </table>
+    <font size="3">
+    <footer align="left">
+        <hr>
+        <h6>Todas as imagens são de autoria da <a href="https://www.apple.com/br/" target="_blank">Apple Computer Inc&copy;</a></h6>
+        <h6>Todos os textos foram escritos pelo autor e inspirados pelo artigo "Destaques da WWDC23" da <a href="https://www.apple.com/br/"target="_blank">Apple&copy;</a></h6>
+    </footer>
+    </font>
+    </font>
 </body>
 </html>
