--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <title>WWDC 2023</title>
 </head>
 <body bgcolor="#000000">
-    <font color="#FFFFFF">
-    <font face="Arial">
+    <font color="#FFFFFF" face="Arial" size="5">
     <img src="IMG/WWDC2023.png" alt="WWDC e logo da apple" width="100%" height="auto" margin="0">
     <table align=center cellpadding="1%" cellspacing="1">
         <tr>
@@ -17,8 +16,8 @@
             <th><a href="WWDC.html"><img src="IMG/WWDC2024.jpg" alt="WWD24" width="23%" height="auto"></a></th>
         </tr>
     </table>
-    <h1 align="center"><b>Destaques</b></h1>
-    <h2 align="center"><b>WorldWide Developers Conferece </b></h2>
+    <font size="7"><h1 align="center"><b>Destaques</b></h1></font>
+    <font size="5"><h1 align="center"><b>WorldWide Developers Conferece </b></h2></font>
     <center>
     <figure>
         <img src="IMG/DestaquesWWDC23.jpg" alt="CEO da Apple ao lado do Apple Vision Pro">
@@ -32,8 +31,15 @@
         Sendo apresentadas várias inovações sendo a principal o Vision Pro um computador em formato de óculos que une o mundo virtual e o físico.
         Além disso, foram anunciados novos chips da família M os M2 e os novos iOS 17, iPadOS 17, macOS Sonoma, watchOS 10, tvOS 17 e novas atualizações para os AirPods de 2ª 
     </p>
-
-    </center>
+    <font size="3">
     
+    <footer align="left">
+        <hr>
+        <h6>Todas as imagens são de autoria da <a href="https://www.apple.com/br/" target="_blank">Apple Computer Inc&copy;</a></h6>
+        <h6>Todos os textos foram escritos pelo autor e inspirados pelo artigo "Destaques da WWDC23" da <a href="https://www.apple.com/br/"target="_blank">Apple&copy;</a></h6>
+    </footer>
+    </center>
+    </font>
+    </font>
 </body>
 </html>
