--- a/WWDC.html
+++ b/WWDC.html
@@ -6,8 +6,7 @@
     <title>WWDC 2024</title>
 </head>
 <body bgcolor="#000000">
-    <font color="#FFFFFF">
-    <font face="Arial">
+    <font face="Arial" color="#FFFFFF" size="5">
     <img src="IMG/WWDC2024.jpg" alt="WWDC 2024" width="100%" height="auto" margin="0">
     <table align=center cellpadding="1%" cellspacing="1">
         <tr>
@@ -17,5 +16,13 @@
             <th><a href="index.html"><img src="IMG/WWDC2023.png" alt="WWDC 2023" width="23%" height="auto"></a></th>
         </tr>
     </table>
+    <font>
+        <footer align="left">
+            <hr>
+            <h6>Todas as imagens são de autoria da <a href="https://www.apple.com/br/" target="_blank">Apple Computer Inc&copy;</a></h6>
+            <h6>Todos os textos foram escritos pelo autor e inspirados pelo artigo "Destaques da WWDC23" da <a href="https://www.apple.com/br/"target="_blank">Apple&copy;</a></h6>
+        </footer>
+    </font>
+    </font>
 </body>
 </html>
