--- a/VisionPro.html
+++ b/VisionPro.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vision Pro</title>
+    <style type="text/css">
+        img{
+            border-radius: 20px;
+            border: none;
+        }
+    </style>
 </head>
 <body bgcolor="#000000">
     <font face="Arial" color="#FFFFFF" size="5">
