--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WWDC 2023</title>
+    <style type="text/css">
+        img{
+            border-radius: 20px;
+            border: none;
+        }
+    </style>
 </head>
 <body bgcolor="#000000">
     <font color="#FFFFFF" face="Arial" size="5">
